force-app/main/default/objects/Journey_Template__c/Journey_Template__c.object-meta.xml
<CustomObject>
<description>Reusable care journey configuration.</description>
<label>Journey Template</label>
<nameField>
<displayFormat></displayFormat>
<label>Journey Template Name</label>
<type>Text</type>
</nameField>
<pluralLabel>Journey Templates</pluralLabel>
<sharingModel>ReadWrite</sharingModel>
</CustomObject>