force-app/main/default/objects/Journey_Template__c/fields/Appointment_Type__c.field-meta.xml
<CustomField>
<fullName>Appointment_Type__c</fullName>
<label>Appointment Type</label>
<type>Text</type>
<length>80</length>
</CustomField>