force-app/main/default/objects/Journey_Template__c/fields/Attempt_Gap_Days__c.field-meta.xml
<CustomField>
<fullName>Attempt_Gap_Days__c</fullName>
<label>Attempt Gap Days</label>
<type>Number</type>
<precision>3</precision>
<scale>0</scale>
<defaultValue>0</defaultValue>
</CustomField>