force-app/main/default/objects/Journey_Template__c/fields/Checkin_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Checkin_Record_Type__c</fullName>
    <label>Check-in RT</label>
    <length>80</length>
    <type>Text</type>
</CustomField>