force-app/main/default/objects/Journey_Template__c/fields/Checkin_Template__c.field-meta.xml
<CustomField>
    <fullName>Checkin_Template__c</fullName>
    <label>Check-in Template</label>
    <referenceTo>Message_Template__c</referenceTo>
    <relationshipLabel>Check-in Template Records</relationshipLabel>
    <relationshipName>Checkin_Template</relationshipName>
    <type>Lookup</type>
</CustomField>