force-app/main/default/objects/Journey_Template__c/fields/Interval_Days__c.field-meta.xml
<CustomField>
<fullName>Interval_Days__c</fullName>
<label>Interval Days</label>
<type>Number</type>
<precision>5</precision>
<scale>0</scale>
<defaultValue>0</defaultValue>
</CustomField>