force-app/main/default/objects/Journey_Template__c/fields/LTFU_After_Days__c.field-meta.xml
<CustomField>
    <fullName>LTFU_After_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>LTFU After Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>