force-app/main/default/objects/Journey_Template__c/fields/Outreach_Template__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outreach</label>
    <referenceTo>Message_Template__c</referenceTo>
    <relationshipLabel>Outreach Records</relationshipLabel>
    <relationshipName>Outreach_Template</relationshipName>
    <type>Lookup</type>
</CustomField>