force-app/main/default/objects/Journey_Template__c/fields/Snooze_Days__c.field-meta.xml
<CustomField>
    <fullName>Snooze_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Snooze Days</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>