force-app/main/default/objects/Journey_Template__c/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Diabetology</fullName><default>false</default><label>Diabetology</label></value>
            <value><fullName>Endocrinology</fullName><default>false</default><label>Endocrinology</label></value>
            <value><fullName>Cardiology</fullName><default>false</default><label>Cardiology</label></value>
            <value><fullName>General Medicine</fullName><default>false</default><label>General Medicine</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
</CustomField>